force-app/main/default/objects/Policy_Information__c/fields/Complex_Customer_Specific_Projects__c.field-meta.xml
<CustomField>
    <fullName>Complex_Customer_Specific_Projects__c</fullName>
    <inlineHelpText>Complex, customer specific projects that do not fit into other
categories and are key to CMC engagement on a particular customer.</inlineHelpText>
    <label>Complex Customer-Specific Projects %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>