force-app/main/default/objects/Policy_Information__c/fields/Complex_External_Audits_2__c.field-meta.xml
<CustomField>
    <fullName>Complex_External_Audits_2__c</fullName>
    <formula>(IF(AND( Complex_External_Audits__c &gt;=  $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_External_Audits_Range_1.Start_Range__c  ,
Complex_External_Audits__c &lt;=  $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_External_Audits_Range_1.End_Range__c  ),  $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_External_Audits_Range_1.Weightage__c  ,

IF(AND(Complex_External_Audits__c &gt;=
 $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_External_Audits_Range_2_4.Start_Range__c  ,
Complex_External_Audits__c &lt;=
  $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_External_Audits_Range_2_4.End_Range__c   ),  $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_External_Audits_Range_2_4.Weightage__c  ,


IF(Complex_External_Audits__c &gt;=
 $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_External_Audits_Range_5_and_more.Start_Range__c  ,  $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_External_Audits_Range_5_and_more.Weightage__c  , 0) ) ) ) * 0.05</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complex External Audits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>