force-app/main/default/objects/Policy_Information__c/fields/Complex_External_Audits__c.field-meta.xml
<CustomField>
    <fullName>Complex_External_Audits__c</fullName>
    <inlineHelpText>Audits that are more complex than a simple low volume statistical claim audit and could include appeal audits, clinical audits, DOL audits, financial audits, high volume statistical audits, security audits, etc.
A standard or simple audit not included in this category would be a straightforward low volume (i.e. 220) statistical claim audit with minimal research or support required. A more complex audit would be higher volume, require extensive research, support and follow up.</inlineHelpText>
    <label>Complex External Audits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>