force-app/main/default/objects/Policy_Information__c/fields/Complex_Reporting_2__c.field-meta.xml
<CustomField>
    <fullName>Complex_Reporting_2__c</fullName>
    <formula>(IF( AND(Complex_Reporting__c &gt;=  $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_Reporting_Range_0.Start_Range__c ,
Complex_Reporting__c &lt;=
  $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_Reporting_Range_0.End_Range__c  ),  $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_Reporting_Range_0.Weightage__c  ,

IF(AND(Complex_Reporting__c &gt;=
 $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_Reporting_Range_1.Start_Range__c  ,
Complex_Reporting__c &lt;=  $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_Reporting_Range_1.End_Range__c ),  $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_Reporting_Range_1.Weightage__c  ,

IF(AND(Complex_Reporting__c &gt;=  $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_Reporting_Range_2_3.Start_Range__c  ,
Complex_Reporting__c &lt;=  $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_Reporting_Range_2_3.End_Range__c  ), $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_Reporting_Range_2_3.Weightage__c  ,

IF(AND(Complex_Reporting__c &gt;=  $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_Reporting_Range_4_6.Start_Range__c  ,
Complex_Reporting__c &lt;=
 $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_Reporting_Range_4_6.End_Range__c  ),  $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_Reporting_Range_4_6.Weightage__c  ,

IF(Complex_Reporting__c &gt;=  $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_Reporting_Range_7_and_more.Start_Range__c  ,
 $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Complex_Reporting_Range_7_and_more.Weightage__c  ,
0) ) ) ) ))  * 0.04</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complex Reporting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>