force-app/main/default/objects/Policy_Information__c/fields/Complex_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Complex_Reporting__c</fullName>
    <inlineHelpText>Number of complex/non-standard reports managed by CMC and
provided monthly or quarterly</inlineHelpText>
    <label>Complex Reporting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>