force-app/main/default/objects/Policy_Information__c/fields/Complexity_Score_Hours_to_Maintain__c.field-meta.xml
<CustomField>
    <fullName>Complexity_Score_Hours_to_Maintain__c</fullName>
    <formula>Add_ons_Sum_of_total_input__c + Reporting_Score__c +  Customer_layers_Score_incl_consultants__c + Total_ASO_FI_Benefit_Sets_Score__c +
	 Plan_Variation_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complexity Score (Hours to Maintain)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>