force-app/main/default/objects/Policy_Information__c/fields/Concierge_Vendor_2__c.field-meta.xml
<CustomField>
    <fullName>Concierge_Vendor_2__c</fullName>
    <formula>CASE( Concierge_Vendor__c , &quot;UHC/UMR no other external concierge vendor&quot;, $CustomMetadata.Policy_Picklist_Weightage__mdt.Concierge_UHC_UMR_no_other_external_conc.Weightage__c, &quot;Quantum/People Care&quot;,$CustomMetadata.Policy_Picklist_Weightage__mdt.Concierge_Quantum_People_Care.Weightage__c, &quot;UMR Plan Advisor&quot;, $CustomMetadata.Policy_Picklist_Weightage__mdt.Concierge_UMR_Plan_Advisor.Weightage__c, &quot;Accolade&quot;, $CustomMetadata.Policy_Picklist_Weightage__mdt.Concierge_Accolade.Weightage__c, &quot;Compass or Grand Rounds&quot;, $CustomMetadata.Policy_Picklist_Weightage__mdt.Concierge_Compass_or_Grand_Rounds.Weightage__c, &quot;Other (New Vendor or Setup)&quot;, $CustomMetadata.Policy_Picklist_Weightage__mdt.Other_New_Vendor_or_Setup.Weightage__c, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concierge Vendor 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>