force-app/main/default/objects/Policy_Information__c/fields/Concierge_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Concierge_Vendor__c</fullName>
    <inlineHelpText>A vendor internal or external that offers personalized, one-on-one assistance to consumers navigating the healthcare system</inlineHelpText>
    <label>Concierge Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UHC/UMR no other external concierge vendor</fullName>
            </value>
            <value>
                <fullName>Quantum/People Care</fullName>
            </value>
            <value>
                <fullName>UMR Plan Advisor</fullName>
            </value>
            <value>
                <fullName>Accolade</fullName>
            </value>
            <value>
                <fullName>Compass or Grand Rounds</fullName>
                <label>Compass or Included Health</label>
            </value>
            <value>
                <fullName>Other (New Vendor or Setup)</fullName>
            </value>
            <value>
                <fullName>Accolade,</fullName>
                <isActive>false</isActive>
                <label>Accolade,</label>
            </value>
            <value>
                <fullName>Compass or Grand Rounds,</fullName>
                <isActive>false</isActive>
                <label>Compass or Grand Rounds,</label>
            </value>
            <value>
                <fullName>Other (New Vendor or Setup).</fullName>
                <isActive>false</isActive>
                <label>Other (New Vendor or Setup).</label>
            </value>
            <value>
                <fullName>Quantum/People Care,</fullName>
                <isActive>false</isActive>
                <label>Quantum/People Care,</label>
            </value>
            <value>
                <fullName>UMR Plan Advisor,</fullName>
                <isActive>false</isActive>
                <label>UMR Plan Advisor,</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>