force-app/main/default/objects/Policy_Information__c/fields/Concierge_Vendor_Manual__c.field-meta.xml
<CustomField>
    <fullName>Concierge_Vendor_Manual__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Concierge Vendor (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>