force-app/main/default/objects/Policy_Information__c/fields/Critical_Illness__c.field-meta.xml
<CustomField>
    <fullName>Critical_Illness__c</fullName>
    <defaultValue>&quot;0 - No&quot;</defaultValue>
    <inlineHelpText>Critical Illness sold as Carve-In</inlineHelpText>
    <label>Critical Illness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - No</fullName>
                <default>true</default>
                <label>0 - No</label>
            </value>
            <value>
                <fullName>1 - Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>