force-app/main/default/objects/Policy_Information__c/fields/CSP_GSP_or_Extended_Networks_25__c.field-meta.xml
<CustomField>
    <fullName>CSP_GSP_or_Extended_Networks_25__c</fullName>
    <label>CSP/GSP or Extended Networks (.25)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>