force-app/main/default/objects/Policy_Information__c/fields/CSP_GSP_or_Extended_Networks_2_Backend__c.field-meta.xml
<CustomField>
    <fullName>CSP_GSP_or_Extended_Networks_2_Backend__c</fullName>
    <formula>CASE( CSP_GSP_or_Extended_Networks__c ,&quot;0 that require ongoing activity after setup&quot;, $CustomMetadata.Policy_Picklist_Weightage__mdt.X0_that_require_ongoing_activity_after_s.Weightage__c, &quot;1 that require ongoing activity after setup&quot;, $CustomMetadata.Policy_Picklist_Weightage__mdt.X1_that_require_ongoing_activity_after_s.Weightage__c, &quot;2 or more that require ongoing activity after setup?&quot;, $CustomMetadata.Policy_Picklist_Weightage__mdt.X2_or_more_that_require_ongoing_activit.Weightage__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSP/GSP or Extended Networks 2 (Backend)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>