force-app/main/default/objects/Policy_Information__c/fields/CSP_GSP_or_Extended_Networks__c.field-meta.xml
<CustomField>
    <fullName>CSP_GSP_or_Extended_Networks__c</fullName>
    <inlineHelpText>Does customer have a CSP/GSP or Extended Network set-up?</inlineHelpText>
    <label>CSP/GSP or Extended Networks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 that require ongoing activity after setup</fullName>
            </value>
            <value>
                <fullName>1 that require ongoing activity after setup</fullName>
            </value>
            <value>
                <fullName>2 or more that require ongoing activity after setup?</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>