force-app/main/default/objects/Policy_Information__c/fields/Custom_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Custom_Reporting__c</fullName>
    <defaultValue>&quot;0 - Annual (or Standard)&quot;</defaultValue>
    <inlineHelpText>Custom reporting is defined as external facing reports that cannot be generated from our internal reporting tools. Enter the appropriate score on the complexity model, based on the frequency of the custom reporting requirement.</inlineHelpText>
    <label>Custom Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - Annual (or Standard)</fullName>
            </value>
            <value>
                <fullName>1 - Semi-Annual</fullName>
            </value>
            <value>
                <fullName>2 - Quarterly</fullName>
            </value>
            <value>
                <fullName>3 - Monthly</fullName>
            </value>
            <value>
                <fullName>4 - Weekly</fullName>
            </value>
            <value>
                <fullName>5 - Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>