force-app/main/default/objects/Policy_Information__c/fields/Customer_Care_Site__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Site__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Care Site</label>
    <length>50</length>
    <type>Text</type>
</CustomField>