force-app/main/default/objects/Policy_Information__c/fields/Customer_Layers__c.field-meta.xml
<CustomField>
    <fullName>Customer_Layers__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Customer Layers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>