force-app/main/default/objects/Policy_Information__c/fields/Customer_layers_incl_consultants__c.field-meta.xml
<CustomField>
    <fullName>Customer_layers_incl_consultants__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>A customer layer is determined as the number of external individuals(HR Rep, Consultants, Vendors, etc.) a CM interacts with on a regular basis. Include Health Plan as a customer layer.</inlineHelpText>
    <label>Customer layers (incl consultants)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>