force-app/main/default/objects/Policy_Information__c/fields/Customer_layers_Score_incl_consultants__c.field-meta.xml
<CustomField>
    <fullName>Customer_layers_Score_incl_consultants__c</fullName>
    <formula>Customer_layers_incl_consultants__c *$CustomMetadata.Capacity_Planning_Calculation_Weightage__mdt.Capacity_Planning_Weightage.Customer_layers_incl_consultants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer layers Score (incl consultants)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>