force-app/main/default/objects/Policy_Information__c/fields/Customer_Name_Prior__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Prior__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Name Prior</label>
    <length>50</length>
    <type>Text</type>
</CustomField>