force-app/main/default/objects/Policy_Information__c/fields/Customer_Sponsored_Service_Center_25__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sponsored_Service_Center_25__c</fullName>
    <label>Customer - Sponsored Service Center (.25</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>