force-app/main/default/objects/Policy_Information__c/fields/Customer_Sponsored_Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sponsored_Service_Center__c</fullName>
    <defaultValue>&quot;0 - No&quot;</defaultValue>
    <inlineHelpText>A customer-sponsored service center is defined as a group the CM interacts with on a regular basis (i.e. minimum of monthly contact)</inlineHelpText>
    <label>Customer - Sponsored Service Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>0 - No</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1 - Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>