force-app/main/default/objects/Policy_Information__c/fields/Date_Moved_Off_Shore__c.field-meta.xml
<CustomField>
    <fullName>Date_Moved_Off_Shore__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Moved Off-Shore</label>
    <type>Date</type>
</CustomField>