force-app/main/default/objects/Policy_Information__c/fields/Date_of_Off_Shore_Restriction_Update__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Off_Shore_Restriction_Update__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Off-Shore Restriction Update</label>
    <type>Date</type>
</CustomField>