force-app/main/default/objects/Policy_Information__c/fields/Dental__c.field-meta.xml
<CustomField>
    <fullName>Dental__c</fullName>
    <defaultValue>&quot;0 - No&quot;</defaultValue>
    <inlineHelpText>Dental sold by UHC as either Integrated or Stand-Alone</inlineHelpText>
    <label>Dental</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - No</fullName>
            </value>
            <value>
                <fullName>1 - Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>