force-app/main/default/objects/Policy_Information__c/fields/DentalBackend__c.field-meta.xml
<CustomField>
    <fullName>DentalBackend__c</fullName>
    <formula>CASE(Dental__c,
&quot;0 - No&quot;,0,
&quot;1 - Yes&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DentalBackend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>