force-app/main/default/objects/Policy_Information__c/fields/DHP_Diabetes_Health_Plan__c.field-meta.xml
<CustomField>
    <fullName>DHP_Diabetes_Health_Plan__c</fullName>
    <defaultValue>&quot;0 - No&quot;</defaultValue>
    <inlineHelpText>Does your customer have a Diabetes Health Plan (DHP)?</inlineHelpText>
    <label>zzDHP (Diabetes Health Plan)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>0 - No</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1 - Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>