force-app/main/default/objects/Policy_Information__c/fields/DHP_Diabetes_Health_Plan_Score__c.field-meta.xml
<CustomField>
    <fullName>DHP_Diabetes_Health_Plan_Score__c</fullName>
    <formula>CASE(
    TEXT(DHP_Diabetes_Health_Plan__c),
    &quot;0 - No&quot;, 0,
    &quot;1 - Yes&quot;, 1,
    0
) * 0.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DHP (Diabetes Health Plan) Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>