force-app/main/default/objects/Policy_Information__c/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <defaultValue>&quot;0-Vendor Generated&quot;</defaultValue>
    <inlineHelpText>Please respond with how the majority of your population is handled.</inlineHelpText>
    <label>Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>0-Vendor Generated</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1-Customer Generated, Manual file</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2-Manual Eligibility file</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>