force-app/main/default/objects/Policy_Information__c/fields/Eligibility_Financial_Protection__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Financial_Protection__c</fullName>
    <label>Eligibility Financial Protection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - Vendor Generated</fullName>
            </value>
            <value>
                <fullName>1 - Customer Generated, Manual file</fullName>
            </value>
            <value>
                <fullName>2 - Manual Eligibility file</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>