force-app/main/default/objects/Policy_Information__c/fields/Eligibility_Financial_Protection_Score__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Financial_Protection_Score__c</fullName>
    <formula>CASE(
    TEXT(Eligibility_Financial_Protection__c),
    &quot;0 - Vendor Generated&quot;, 0,
    &quot;1 - Customer Generated, Manual file&quot;, 1,
    &quot;2 - Manual Eligibility file&quot;, 2,
    0
) * 0.25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligibility Financial Protection Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>