force-app/main/default/objects/Policy_Information__c/fields/Eligibility_Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Vendor_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligibility Vendor Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>