force-app/main/default/objects/Policy_Information__c/fields/Exchange_Factor__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Factor__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Exchange Factor</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>