force-app/main/default/objects/Policy_Information__c/fields/Exec_Med__c.field-meta.xml
<CustomField>
    <fullName>Exec_Med__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <inlineHelpText>Executive Medical plan present</inlineHelpText>
    <label>Exec Med</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>