force-app/main/default/objects/Policy_Information__c/fields/External_Audits__c.field-meta.xml
<CustomField>
    <fullName>External_Audits__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Any External Audit the CM manages (i.e. Security, Financial, BIA, etc. included)  Ops Assessments not included.  Please indicate the number conducted annually</inlineHelpText>
    <label>External Audits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>