force-app/main/default/objects/Policy_Information__c/fields/External_Audits_Range_Backend__c.field-meta.xml
<CustomField>
    <fullName>External_Audits_Range_Backend__c</fullName>
    <formula>IF(AND( External_Audits__c &gt;= $CustomMetadata.Capacity_Plan_External_Audits__mdt.Range_0_0.Start_Range__c,
External_Audits__c&lt;= $CustomMetadata.Capacity_Plan_External_Audits__mdt.Range_0_0.End_Range__c),
$CustomMetadata.Capacity_Plan_External_Audits__mdt.Range_0_0.Weightage__c,

IF(AND( External_Audits__c &gt;= $CustomMetadata.Capacity_Plan_External_Audits__mdt.Range_1_1.Start_Range__c,
External_Audits__c&lt;= $CustomMetadata.Capacity_Plan_External_Audits__mdt.Range_1_1.End_Range__c),
$CustomMetadata.Capacity_Plan_External_Audits__mdt.Range_1_1.Weightage__c,

IF(AND( External_Audits__c &gt;= $CustomMetadata.Capacity_Plan_External_Audits__mdt.Range_2_4.Start_Range__c,
External_Audits__c&lt;= $CustomMetadata.Capacity_Plan_External_Audits__mdt.Range_2_4.End_Range__c),
$CustomMetadata.Capacity_Plan_External_Audits__mdt.Range_2_4.Weightage__c,
$CustomMetadata.Capacity_Plan_External_Audits__mdt.Range_4_more.Weightage__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Audits Range(Backend)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>