force-app/main/default/objects/Policy_Information__c/fields/External_Customer_Layers__c.field-meta.xml
<CustomField>
    <fullName>External_Customer_Layers__c</fullName>
    <inlineHelpText>A customer layer is determined as the number of external individuals (i.e: Customer, Consultant, Vendor) a SB Consultant interacts with on a regular basis (i.e. minimum of monthly contact).</inlineHelpText>
    <label>External Customer Layers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>