force-app/main/default/objects/Policy_Information__c/fields/FI_Specialty_Sets__c.field-meta.xml
<CustomField>
    <fullName>FI_Specialty_Sets__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>FI Dental/Vision sets. Updated twice a year.</inlineHelpText>
    <label>FI Specialty Sets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>