force-app/main/default/objects/Policy_Information__c/fields/FI_Specialty_Sets_Score__c.field-meta.xml
<CustomField>
    <fullName>FI_Specialty_Sets_Score__c</fullName>
    <formula>FI_Specialty_Sets__c *  $CustomMetadata.Capacity_Planning_SBC_Calculation_Weight__mdt.Weightages.FI_Specialty_Sets_Weightage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FI Specialty Sets Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>