force-app/main/default/objects/Policy_Information__c/fields/FIGO__c.field-meta.xml
<CustomField>
    <fullName>FIGO__c</fullName>
    <defaultValue>&apos;0 - No&apos;</defaultValue>
    <inlineHelpText>Auto-populated based on FIGO Member field</inlineHelpText>
    <label>FIGO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - No</fullName>
            </value>
            <value>
                <fullName>1 - Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>