force-app/main/default/objects/Policy_Information__c/fields/Finance__c.field-meta.xml
<CustomField>
    <fullName>Finance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Finance Policy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>