force-app/main/default/objects/Policy_Information__c/fields/Financial_Products_2_Backend__c.field-meta.xml
<CustomField>
    <fullName>Financial_Products_2_Backend__c</fullName>
    <formula>IF( ISPICKVAL( FSA_c__c , &quot;1&quot;), 0.20, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Products 2(Backend)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>