force-app/main/default/objects/Policy_Information__c/fields/Flex_Work__c.field-meta.xml
<CustomField>
    <fullName>Flex_Work__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <inlineHelpText>Flex Work sold either on UHOPS or USP platforms</inlineHelpText>
    <label>Flex Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>