force-app/main/default/objects/Policy_Information__c/fields/Flexwork__c.field-meta.xml
<CustomField>
    <fullName>Flexwork__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flexwork</label>
    <type>Checkbox</type>
</CustomField>