force-app/main/default/objects/Policy_Information__c/fields/FMLA__c.field-meta.xml
<CustomField>
    <fullName>FMLA__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <inlineHelpText>FMLA Applies</inlineHelpText>
    <label>FMLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>