force-app/main/default/objects/Policy_Information__c/fields/Frozen_ASO_Score__c.field-meta.xml
<CustomField>
    <fullName>Frozen_ASO_Score__c</fullName>
    <formula>Frozen_ASO_Plans__c*$CustomMetadata.Capacity_Planning_Calculation_Weightage__mdt.Capacity_Planning_Weightage.Frozen_ASO_Plans__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frozen ASO Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>