force-app/main/default/objects/Policy_Information__c/fields/Frozen_FI_Plans__c.field-meta.xml
<CustomField>
    <fullName>Frozen_FI_Plans__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>A frozen (grandfathered) benefit set that has NO activity.  The set(s) may include a frozen (grandfathered) population and/or minimal participant movement into and out of the plan.  The set(s) may include minimal escalated participant issues (less than 5 per year)</inlineHelpText>
    <label>Frozen FI Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>