force-app/main/default/objects/Policy_Information__c/fields/Frozen_UMR_Plans_2__c.field-meta.xml
<CustomField>
    <fullName>Frozen_UMR_Plans_2__c</fullName>
    <formula>( Frozen_UMR_Plans__c /10) *   $CustomMetadata.Capacity_Planning_Calculation_Weightage__mdt.Capacity_Planning_Weightage.Frozen_UMR_Plans_Weightage__c</formula>
    <label>Frozen UMR Plans</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>