force-app/main/default/objects/Policy_Information__c/fields/Frozen_UMR_Plans__c.field-meta.xml
<CustomField>
    <fullName>Frozen_UMR_Plans__c</fullName>
    <inlineHelpText>A frozen(grandfathered) plan that has NO activity.  The plan(s) may include a frozen(grandfathered) population and/or minimal participant movement into and out of the plan.  The plan(s) may include minimal escalated participant issues (less than 5 per year).</inlineHelpText>
    <label>Frozen UMR Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>